--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,4 @@
 kotlin.code.style=official
 org.gradle.jvmargs=-Xms1g -Xmx2g -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.daemon=true
