--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -3,6 +3,7 @@ name: build native distribution
 on:
   release:
     types:
+      # https://docs.github.com/cn/developers/webhooks-and-events/webhooks/webhook-events-and-payloads#release
       - published
 jobs:
   package:
@@ -13,8 +14,35 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
+      - name: echo OS
+        run: echo ${{ matrix.os }}
+
       # 检出仓库代码
       - name: Check out repo
-        uses: actions/checkout@v2.4.0
+        uses: actions/checkout@v2
+
+      # Setup java
+      - name: Setup Java 17
+        uses: actions/setup-java@v2
+        with:
+          # See 'Supported distributions' for available options
+          distribution: 'zulu'
+          java-version: '17'
+
+      # Gradle
+#      - name: Gradle Wrapper Validation
+#        uses: gradle/wrapper-validation-action@v1.0.4
+
+      - name: Gradle building native distribution
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 7.3.3
+          arguments: package
+
+      - if: 1 == 1
+        name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.3.1
+        with:
+          name: abc
 
 
