--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,7 @@ jobs:
         uses: softprops/action-gh-release@v0.1.14
         with:
           files: build/compose/binaries/main/distributions/**
+          body_path: .changelog/${{ github.event.push.tags }}.md
           draft: true
           generate_release_notes: true
 
