--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 # native package workflows
 name: build and release native distribution
-on:
-  push:
-    tags:
-      - v*.*.**
+on: push
+#  push:
+#    tags:
+#      - v*.*.**
 
 
 jobs:
@@ -14,8 +14,7 @@ jobs:
         os: [ macos-latest, ubuntu-latest, windows-latest ]
     runs-on: ${{ matrix.os }}
 
-    permissions:
-      contents: write
+
 
     steps:
       # 检出仓库代码
@@ -32,8 +31,8 @@ jobs:
           cache: 'gradle'
 
       # Gradle
-#      - name: Gradle Wrapper Validation
-#        uses: gradle/wrapper-validation-action@v1.0.4
+      #      - name: Gradle Wrapper Validation
+      #        uses: gradle/wrapper-validation-action@v1.0.4
 
       - name: Gradle building native distribution
         uses: gradle/gradle-build-action@v2
@@ -47,10 +46,40 @@ jobs:
           name: distributions
           path: build/compose/binaries/main/distributions/**
 
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.3.1
+        with:
+          name: changelog.md
+          path: .changelog/${{ github.ref_name }}.md
+
+
+  release:
+    runs-on: ubuntu-latest
+    needs: package
+
+    permissions:
+      contents: write
+
+    steps:
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: distributions
+          path: distributions
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: changelog.md
+          path: changelog
+
+
       # Releases.
       - name: Create github releases
         uses: softprops/action-gh-release@v0.1.14
         with:
           files: build/compose/binaries/main/distributions/**
-          body_path: .changelog/${{ github.ref_name }}.md
+          body_path: changelog/changelog.md
           generate_release_notes: true
+          draft: true
