--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
         uses: actions/upload-artifact@v2.3.1
         with:
           name: changelog.md
-          path: .changelog/${{ github.ref_name }}.md
+          path:
 
 
   release:
@@ -68,18 +68,15 @@ jobs:
           name: distributions
           path: distributions
 
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: changelog.md
-          path: changelog.md
-
+      # 检出仓库代码
+      - name: Check out repo
+        uses: actions/checkout@v2
 
       # Releases.
       - name: Create github releases
         uses: softprops/action-gh-release@v0.1.14
         with:
           files: distributions/**
-          body_path: changelog.md
+          body_path: .changelog/${{ github.ref_name }}.md
           generate_release_notes: true
           draft: true
