--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,11 +22,11 @@ jobs:
         uses: actions/checkout@v2
 
       # Setup java
+      # https://github.com/marketplace/actions/setup-java-jdk
       - name: Setup Java 17
         uses: actions/setup-java@v2
         with:
-          # See 'Supported distributions' for available options
-          distribution: 'zulu'
+          distribution: 'temurin'
           java-version: '17'
           cache: 'gradle'
 
