--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,22 +55,21 @@ jobs:
       contents: write
 
     steps:
+      # 检出仓库代码
+      - name: Check out repo
+        uses: actions/checkout@v2
 
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
           name: distributions
-          path: distributions
-
-      # 检出仓库代码
-      - name: Check out repo
-        uses: actions/checkout@v2
+          path: ./distributions/
 
       # Releases.
       - name: Create github releases
         uses: softprops/action-gh-release@v0.1.14
         with:
-          files: distributions/**
+          files: ./distributions/**
           body_path: .changelog/${{ github.ref_name }}.md
           generate_release_notes: true
           draft: true
